@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-27T16:17:19Z",
+  "timestamp" : "2022-05-28T08:15:52Z",
   "count_outdated" : 300,
   "uniques_outdated" : 155,
-  "count" : 328,
+  "count" : 327,
   "uniques" : 175,
   "clones" : [
     {
       "timestamp": "2022-05-14T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 1,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
